# Est-of-pi-using-monte-carlo-method

./: conftest.py  pyproject.toml  readme.md  stat_analysis.py
pimc/: __init__.py  __main__.py
pimc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pimc/cli/: main.py
pimc/core/: __init__.py  simulation.py  statistics.py
pimc/visualization/: __init__.py  plots.py  themes.py
pimc/web/: app.py
pimc/web/templates/: index.html
tests/: __init__.py  test_simulation.py  test_statistics.py  test_visualization.py
